--- a/static/css/user.css
+++ b/static/css/user.css
@@ -77,16 +77,16 @@
 .u_l_info{background: url(../img/user/r.png) no-repeat right;height: 360px;position: relative;}
 .u_l_info .r_btn{ background: url(../img/btn.png) no-repeat;border: medium none;color: #FFFFFF;cursor: pointer;font-size: 16px;height: 42px;letter-spacing: 10px;line-height: 42px;position: absolute;right: 260px;text-align: center;top: 248px;width: 170px;}
 .u_l_info .r_btn:hover{background: url(../img/btn.png) no-repeat 0 -42px;}
-.quick_menu{position: absolute;right: 0;top: 10px;}
+.quick_menu{width:145px;position: absolute;right: 0;top: 10px;overflow: visible;}
 .quick_menu ul{position: relative;}
 .quick_menu li{float: right;}
-#link_setting,#link_msg{margin:0 10px;border-radius: 2px 2px 0 0;cursor: pointer;display: block;height: 40px;line-height: 40px; padding: 0 15px;}
+#link_setting,#link_msg{margin:0 10px;border-radius: 2px 2px 0 0;cursor: pointer;display: block;height: 40px;padding: 0 15px;}
 #link_setting.active,#link_msg.active{background: #626A6F;}
-.quick_menu #icon_face{display: inline-block;height: 20px;width: 20px;}
-.quick_menu #icon_msg{background: url(../img/icon.png) no-repeat; width: 16px;height: 14px;display: inline-block;}
+.quick_menu #icon_face{display: inline-block;height: 20px;width: 20px;margin-top: 8px;}
+.quick_menu #icon_msg{background: url(../img/icon.png) no-repeat; width: 16px;height: 14px;display: inline-block;margin-top: 13px;}
 #icon_msg.active{background: url(../img/icon.png) no-repeat 0 -16px;}
-.quick_menu_box{background: #626A6F;border-radius: 2px;position: absolute;left: -80px;display: none;top: 34px;z-index: 1000;}
-.quick_menu_con{background: #fff;width: 280px;margin: 0 5px 5px 5px;}
+.quick_menu_box{width:300px;background: #626A6F;border-radius: 2px;position: absolute;left: -80px;display: none;top: 34px;z-index: 1000;}
+.quick_menu_con{background: #fff;margin: 0 5px 5px 5px;}
 .quick_menu_box h2{margin: 10px 15px;font-size: 14px;color: #fff;}
 .quick_menu_box .p_info,.quick_menu_box .p_msg{
 	width: 100%;line-height: 25px;
@@ -558,7 +558,7 @@ table.f14 td, .f14 {
 	position: relative;
 	width: 960px;
 	border-bottom: 1px solid #aaa;
-	height: 40px;
+	height: 35px;
 	
 }
 .nav2-box .new-job {
@@ -571,7 +571,7 @@ table.f14 td, .f14 {
 	margin-right: 9px;
 }
 .nav2 {
-	height: 40px;
+	height: 35px;
 	padding-left: 0;
 	border: none;
 	margin-bottom: -1px;
@@ -589,14 +589,14 @@ table.f14 td, .f14 {
 }
 .nav2 li a {
 	display: block;
-	height: 40px;
+	height: 35px;
 	padding-left: 4px;
 	background: url(../img/repeat.png) repeat-x;
 	background-position: 0 -62px;
 	color: #333;
 	font-size: 14px;
 	text-align: center;
-	line-height: 40px;
+	line-height: 35px;
 }
 #header, #content {
 	width: 960px;
@@ -630,5 +630,304 @@ table.f14 td, .f14 {
 }
 .resume{
 	background: url(../img/user/jian.jpg) no-repeat center 0;
-	padding-top: 134px;
+	padding-top: 140px;
+}
+
+
+/*preview resume*/
+.g-yahei {
+    font-family: "MicroSoft YaHei","SimHei";
+}
+.bge{background: #eee;}
+.preview-header {
+	background: url(../img/user/r-logo.png) no-repeat 0 10px;
+    height: 50px;
+    margin: auto;
+    padding-bottom: 10px;
+    width: 800px;
+    margin-top: 20px;
+}
+.preview-header .opt-box {
+    margin-top: 26px;
+}
+.opt-box .k-btn-r{
+	background: url(../img/repeat.png) repeat-x;
+	display: inline-block;
+	height: 25px;
+	width: 60px;
+	line-height: 25px;
+	text-align: center;
+	border: 1px solid #ddd;
+}
+.preview-main {
+    background: none repeat scroll 0 0 #FFFFFF;
+    border: 1px solid #D5D5D5;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+    margin: auto;
+    width: 804px;
+    font-family: "verdana";
+}
+.preview-main .main-wrap {
+    min-height: 410px;
+    padding: 45px 73px;
+    width: 654px;
+}
+.pre-photo {
+    border: 1px solid #D9D9D9;
+    float: right;
+    height: 120px;
+    margin-left: 15px;
+    width: 120px;
+}
+.pre-photo img {
+    height: 120px;
+    width: 120px;
+}
+.pre-base {
+    padding-bottom: 45px;
+}
+.pre-base h2 {
+    font-size: 26px;
+    line-height: 1.4;
+    padding-bottom: 12px;
+    font-weight: normal;
+}
+.pre-base h2 span {
+    color: #999999;
+    font-size: 18px;
+    font-weight: normal;
+}
+.pre-base p {
+    color: #666666;
+    line-height: 24px;
+}
+.pre-item dt {
+    background: url(../img/preview-tit-bg.gif);
+}
+.pre-item dt span {
+    background: none repeat scroll 0 0 #FFFFFF;
+    display: inline-block;
+    font-size: 18px;
+    width: 100px;
+    font-weight: normal;
+    color: #333;
+}
+.pre-item dd {
+    color: #808080;
+    padding-bottom: 20px;
+}
+.pre-item .item-tit {
+    color: #58667B;
+    font-weight: bold;
+    padding-bottom: 5px;
+}
+.pre-item .item-tit span {
+    padding-left: 10px;
+}
+.pre-item .item-tit .sumtime {
+    color: #999999;
+    font-weight: normal;
+}
+.pre-item .item-tit .sumtime em {
+    color: #D9D9D9;
+}
+.pre-item .item-des {
+    line-height: 24px;
+    padding-top: 10px;
+}
+.pre-item p {
+    line-height: 24px;
+    width: 530px;
+    word-break: break-all;
+    word-wrap: break-word;
+}
+.pre-item p.list {
+    width: 550px;
+    word-break: break-all;
+    word-wrap: break-word;
+}
+.pre-item p .item-list {
+    padding-right: 25px;
+}
+.pre-item th {
+    color: #999999;
+    line-height: 20px;
+    padding-right: 25px;
+    padding-top: 15px;
+    vertical-align: top;
+    width: 75px;
+}
+.pre-item td {
+    padding: 15px 0;
+}
+.pre-item .line {
+    border-bottom: 1px solid #F2F2F2;
+}
+.pre-item .list span {
+    padding-right: 20px;
+}
+.pre-item .indent-wrap {
+    padding-left: 40px;
+    width: 490px;
+}
+.pre-item .indent-wrap em {
+    float: left;
+    margin-left: -40px;
+}
+.pre-item table {
+    width: 100%;
+}
+.base-tit {
+    font-size: 18px;
+}
+.base-info {
+    background: url(../img/base-info-bg.gif) repeat-x #F9F9F9;
+    border-top: 1px solid #DBDBDB;
+    padding: 35px 73px;
+}
+.base-info ul {
+    padding: 12px 0 0 100px;
+}
+.base-bd li {
+    color: #808080;
+    float: left;
+    font-family: tahoma;
+    height: 24px;
+    line-height: 24px;
+    overflow: hidden;
+    width: 250px;
+    word-break: break-all;
+    word-wrap: break-word;
+}
+.base-bd li.address {
+    height: auto;
+    overflow: auto;
+    width: 500px;
+}
+.offer-list em {
+    padding-right: 10px;
+}
+.exportDialog {
+    padding: 30px 0;
+    text-align: center;
+}
+.exportDialog p {
+    color: #666666;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    vertical-align: middle;
+}
+.exportDialog .btn-box {
+    margin: 40px 0 20px;
+    text-align: center;
+}
+.exportDialog .btn-box a {
+    display: inline-block;
+}
+@media print {
+body {
+    vertical-align: top;
+}
+.preview-content {
+    width: 654px;
+}
+.preview-header {
+    display: none;
+}
+.preview-main {
+    border: medium none;
+    box-shadow: none;
+    width: 654px;
+}
+.main-wrap, .base-info {
+    padding: 0;
+}
+
+}
+/*求职信*/
+
+.add-letter{
+	background: url(../img/user/letter-bg.jpg) no-repeat center 0;
+	text-align: center;
+	height: 350px;
+	padding-top: 60px;
+}
+.letter-title {
+    color: #333333;
+    font-size: 24px;
+    height: 66px;
+}
+
+.letter-tip {
+    color: #666666;
+    font-size: 16px;
+    height: 38px;
+}
+
+.btn-wrap {
+    font-size: 16px;
+    height: 38px;
+    margin-top: 72px;
+}
+.btn-wrap #add-btn {
+    background: url(../img/btn.png) no-repeat 0 -124px;
+    color: #333333;
+    display: inline-block;
+    font-size: 16px;
+    height: 38px;
+    width: 130px;
+    line-height: 38px;
+}
+#letter-form {
+    display: none;
+    margin: 16px auto 0;
+    width: 510px;
+}
+
+#letter-con {
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background:#F9F9F9;
+    border-color: #C6C6C6 #EEEEEE #EEEEEE #C6C6C6;
+    border-style: solid;
+    border-width: 1px;
+    height: 100px;
+    line-height: 22px;
+    overflow-y: auto;
+    padding: 8px 0;
+    resize: none;
+    width: 508px;
+    font-size: 14px;
+}
+#letter-form .input-tip {
+    color: #999999;
+    margin-top: 14px;
+    text-align: left;
+}
+
+#letter-form .form-btn {
+    margin-top: -18px;
+    padding-right: 4px;
+    position: relative;
+    text-align: right;
+    z-index: 100;
+}
+.form-btn .button{
+	display: inline-block;
+	height: 30px;
+	background: url(../img/repeat.png) repeat-x 0 -242px;
+	padding: 0 20px;
+	letter-spacing: 5px;
+	color: #333;
+	line-height: 30px;
+	border: 1px solid #ddd;
+	margin-right: 10px;
+	cursor: pointer;
+}
+.form-btn .letter-add-btn{
+	background: url(../img/repeat.png) repeat-x 0 -278px;
+	border: 1px solid #F0BC1C;
 }
