--- a/static/css/user.css
+++ b/static/css/user.css
@@ -144,7 +144,7 @@
     width: 268px;
 }
 .sidecolumn {
-    background: none repeat scroll 0 0 #FFFFFF;
+    background: none repeat #FFFFFF;
     border: 1px solid #D9D9D9;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
     overflow: hidden;
@@ -259,7 +259,7 @@
     border-width: 1px 1px medium;
 }
 .item-section h3 {
-    background: none repeat scroll 0 0 #F4F4F4;
+    background: none repeat #F4F4F4;
     height: 26px;
     line-height: 26px;
     padding: 5px 20px;
@@ -296,7 +296,7 @@
     text-decoration: none;
 }
 .item-bd {
-    background: none repeat scroll 0 0 #FFFFFF;
+    background: none repeat #FFFFFF;
     padding: 20px 48px;
 }
 .info-area th {
@@ -319,7 +319,6 @@
     border-bottom: 1px solid #F3F3F3;
 }
 .item-bd .table-list .edit {
-    background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
     margin-right: 10px;
 }
 .blank-area {
@@ -350,7 +349,7 @@
 }
 
 .photo-mask {
-    background: none repeat scroll 0 0 #FFFFFF;
+    background: none repeat #FFFFFF;
     height: 130px;
     left: 0;
     opacity: 0.8;
@@ -385,7 +384,7 @@
     z-index: 9;
 }
 .resume-masking {
-    background: none repeat scroll 0 0 #FFFFFF;
+    background: none repeat #FFFFFF;
     display: none;
     left: -1px;
     opacity: 0.5;
@@ -445,8 +444,7 @@ a.disable:hover {
     background-position: 10px 12px;
     border-bottom: 1px solid #B0B0B0;
     border-right: 1px solid #B0B0B0;
-    cursor: all-scroll;
-    margin-bottom: 5px;
+    cursor: all- margin-bottom: 5px;
     padding: 8px 10px 8px 23px;
 }
 .drag-model .disable-list dd {
@@ -556,7 +554,7 @@ table.f14 td, .f14 {
 
 .nav2-box {
 	position: relative;
-	width: 960px;
+	width: 980px;
 	border-bottom: 1px solid #aaa;
 	height: 35px;
 	
@@ -599,7 +597,7 @@ table.f14 td, .f14 {
 	line-height: 35px;
 }
 #header, #content {
-	width: 960px;
+	width: 980px;
 	margin-right: auto;
 	margin-left: auto;
 	clear: both;
@@ -613,7 +611,7 @@ table.f14 td, .f14 {
 }
 .subsubNav {
 	margin: 10px auto;
-	width: 960px;
+	width: 980px;
 	padding-left: 20px;
 }
 .subsubNav a {
@@ -660,7 +658,7 @@ table.f14 td, .f14 {
 	border: 1px solid #ddd;
 }
 .preview-main {
-    background: none repeat scroll 0 0 #FFFFFF;
+    background: none repeat #FFFFFF;
     border: 1px solid #D5D5D5;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
     margin: auto;
@@ -705,7 +703,7 @@ table.f14 td, .f14 {
     background: url(../img/preview-tit-bg.gif);
 }
 .pre-item dt span {
-    background: none repeat scroll 0 0 #FFFFFF;
+    background: none repeat #FFFFFF;
     display: inline-block;
     font-size: 18px;
     width: 100px;
@@ -930,4 +928,211 @@ body {
 .form-btn .letter-add-btn{
 	background: url(../img/repeat.png) repeat-x 0 -278px;
 	border: 1px solid #F0BC1C;
+}
+
+/*投递反馈*/
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+.feedback-main {
+    padding: 20px 40px 70px;
+    margin-top: 20px;
+}
+.screen-bar {
+    float: right;
+}
+.screen-bar .text {
+    background:#FFFFFF;
+    border: 1px solid #C2C5CA;
+    height: 18px;
+    line-height: 18px;
+    padding: 3px 4px;
+    vertical-align: top;
+    width: 257px;
+    font-size: 12px;
+}
+.search-btn {
+    background: url(../img/btn.png) no-repeat 0 -163px;
+    display: inline-block;
+    height: 26px;
+    text-indent: -999em;
+    vertical-align: top;
+    width: 31px;
+}
+.feedback-list {
+    padding-top: 12px;
+}
+.feedback-list table {
+    table-layout: fixed;
+    width: 100%;
+}
+.feedback-list thead td {
+    background: none repeat #F7F7F7;
+    border-bottom: 1px solid #D9D9D9;
+    color: #999999;
+    height: 30px;
+    padding: 0 5px;
+}
+.feedback-list td {
+    border-bottom: 1px solid #E6E6E6;
+    padding: 10px 5px;
+}
+.feedback-list td p{margin: 0;}
+.feedback-loading {
+    background: url(../img/loading.gif) no-repeat center center;
+    height: 48px;
+    width: 100%;
+}
+.state-tag li {
+    float: left;
+    height: 26px;
+    padding-right: 5px;
+}
+.state-tag li span {
+    background-image: url(../img/tab-arrow2.gif);
+    background-repeat: no-repeat;
+    display: block;
+    height: 26px;
+    line-height: 26px;
+}
+.state-tag li span.state1 {
+    background-position: 0 0;
+    color: #999999;
+    text-align: left;
+    text-indent: 8px;
+    width: 82px;
+}
+.state-tag li span.state2 {
+    background-position: 0 -52px;
+    color: #999999;
+    text-align: left;
+    text-indent: 8px;
+    width: 65px;
+}
+.state-tag li.current span.state1 {
+    background-position: 0 -26px;
+    color: #333333;
+}
+.state-tag li.current span.state2 {
+    background-position: 0 -78px;
+    color: #333333;
+}
+.state-tag li span.state3 {
+    background: none;
+}
+.state-tag li a {
+    white-space: nowrap;
+}
+.feedback-list a {
+    color: #127DB3;
+}
+.feedback-list .time-td {
+    color: #999999;
+    font-family: tahoma;
+    padding-right: 0;
+}
+.feedback-list .name-td .tit {
+    font-weight: bold;
+    padding-bottom: 8px;
+}
+.feedback-list .name-td p em {
+    padding-right: 5px;
+}
+.feedback-list .hover td {
+    background: #FAFAFA;
+}
+.feedback-list thead .hover td {
+    background: #F7F7F7;
+}
+.feedback-list .remove {
+    visibility: hidden;
+}
+.feedback-list tr.hover .remove {
+    visibility: visible;
+}
+
+.select-input {
+    display: inline-block;
+    margin-left: 2px;
+    position: relative;
+    vertical-align: middle;
+    width: auto;
+}
+.select-input p {
+    background: url(../img/select-arrow.gif) no-repeat right center #FFFFFF;
+    border: 1px solid #C2C5CA;
+    cursor: pointer;
+    height: 24px;
+    line-height: 24px;
+    padding-left: 5px;
+    text-indent: 0;
+    width: 110px;
+    margin-top: 0;
+}
+.select-input p.bs-p-select {
+    background-color:;
+    border: 1px solid #BABABA;
+}
+.select-input p.bs-p-over {
+    background-color:;
+    border: 1px solid #BABABA;
+}
+.select-input p span {
+    float: right;
+    height: 24px;
+    line-height: 24px;
+    text-align: center;
+    width: 15px;
+}
+.select-input ul {
+    background: none repeat #FFFFFF;
+    border: 1px solid #CCCCCC;
+    display: none;
+    left: 0;
+    overflow-y: auto;
+    padding: 1px;
+    position: absolute;
+    top: 25px;
+    width: 113px;
+    z-index: 1;
+}
+.select-input ul:after {
+    display: none;
+}
+.select-input ul li {
+    cursor: pointer;
+    height: 26px;
+    line-height: 26px;
+    padding-left: 5px;
+}
+.select-input ul li.bs-select, .select-input ul li.bs-over {
+    background-color: #F1F1F1;
+}
+.current-tips .inn-con {
+    color: #666666;
+    padding: 5px;
+}
+.feedback-blank {
+    background: url("http://1.assets.dajieimg.com/up/resume/images/blank.jpg") no-repeat er 0;
+    color: #666666;
+    font-size: 14px;
+    margin: 75px auto 90px;
+    padding-top: 125px;
+    text-align: center;
+    width: 180px;
+}
+.feedbackSearch-blank {
+    background: url("http://1.assets.dajieimg.com/up/resume/images/blank2.jpg") no-repeat er 0;
+    color: #666666;
+    font-size: 14px;
+    margin: 75px auto 90px;
+    padding-top: 100px;
+    text-align: center;
+    width: 190px;
+}
+.feedback-loading {
+    background: url("http://0.assets.dajieimg.com/images/chrome/loading_black_24.gif") no-repeat er center;
+    height: 48px;
+    width: 100%;
 }
